--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <base href="/">
 
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="aEHfY-JY88f-uhyfCLLwrOlf9GvuTmWP7sIGwsxH8xY" />
     <meta content="IE=Edge" http-equiv="X-UA-Compatible">
     <meta name="description" content="A new Flutter project.">
 
